2021-06-03  Frank Ch. Eigler <fche@redhat.com>

	PR27863
	* debuginfod.cxx (unique_set, unique_set_reserver): New classes.
	(handler_cb): Use them to implement "after-you" queueing.

2021-05-14  Frank Ch. Eigler <fche@redhat.com>

	PR27859
	* debuginfod-client.c (debuginfod_client): Retain only
	long-lived multi handle from PR27701 work.
	(debuginfo_begin,debuginfod_end): ctor/dtor for surviving field only.
	(debuginfod_query_server): Rework to reuse multi handle only.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* debuginfod-client.c (debuginfod_query_server): Use startswith.
	(debuginfod_add_http_header): Likewise.
	* debuginfod.cxx: Likewise.

2021-05-04  Alice Zhang <alizhang@redhat.com>

	* debuginfod-client.c (cache_miss_default_s): New static time_t,
	defaults to 600 (10 minutes).
	(cache_miss_filename): New static char pointer.
	(debuginfod_config_cache): New static function.
	(debuginfod_clean_cache): Use debuginfod_config_cache for
	interval_path and max_unused_path.
	(debuginfod_query_server): Check whether target_cache_path exists
	as negative cache file and create target_cache_path when the server
	returns ENOENT. Check cache_miss_path fir cache miss time.

2021-04-26  Frank Ch. Eigler <fche@redhat.com>

	PR27571
	* debuginfod-client.c (debuginfod_query_server): Chmod 0400 files
	delivered into the cache to prevent accidental modification.

2021-04-26  Frank Ch. Eigler <fche@redhat.com>

	PR26125
	* debuginfod-client.c (debuginfod_clean_cache): For directory
	rmdir, check mtime first.
	(debuginfod_query_server): Try mkdir / mkstemp up to twice,
	in case of race.

2021-04-23  Frank Ch. Eigler <fche@redhat.com>

	PR27701
	* debuginfod-client.c (struct debuginfod_client): Add long-lived
	CURL easy and multi handles.
	(debuginfo_begin,debuginfod_end): ctor/dtor for these.
	(debuginfod_query_server): Rework to reuse easy & multi handles.
	(*_envvar): Just use the DEBUGINFOD_*_ENV_VAR directly instead.
