@@ -1,3 +1,8 @@
+2021-06-18  Mark Wielaard  <mark@klomp.org>
+
+	* debuginfod-client.c (debuginfod_begin): Don't use client if
+	calloc call failed.
+
 2021-06-03  Frank Ch. Eigler <fche@redhat.com>
 
 	PR27863
